<resources>
    <string name="app_name">Team Holay</string>
    <string name="highScore_text">High Scores</string>
    <string name="play_text">Play</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="four_text">4</string>
    <string name="six_text">6</string>
    <string name="eight_text">8</string>
    <string name="ten_text">10</string>
    <string name="twelve_text">12</string>
    <string name="fourteen_text">14</string>
    <string name="sixteen_text">16</string>
    <string name="eighteen_text">18</string>
    <string name="twenty_text">20</string>
    <string name="choose_game_text">Choose your Game</string>
</resources>
