<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="holay.team.memorycards.SelectionActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_game_text"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginBottom="80dp"
        android:textColor="@color/fontColor"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/four_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/four_text"
            android:layout_marginRight="12dp"/>
        <Button
            android:id="@+id/six_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/six_text"
            android:layout_marginRight="12dp"/>
        <Button
            android:id="@+id/eight_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/eight_text"
            android:layout_marginRight="12dp"/>
        <Button
            android:id="@+id/ten_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/ten_text"
            android:layout_marginRight="12dp"/>
        <Button
            android:id="@+id/twelve_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/twelve_text"
            android:layout_marginRight="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/fourteen_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/fourteen_text"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/sixteen_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/sixteen_text"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/eighteen_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/eighteen_text"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/twenty_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/twenty_text"
            android:layout_marginRight="13dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/continue_button"
        android:text="Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
